--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -253,4 +253,7 @@
     
     <!-- Operating volatage for bluetooth controller. 0 by default -->
     <integer name="config_bluetooth_operating_voltage_mv">4</integer>
-</resources>	
+
+    <bool name="config_windowIsRound">true</bool>
+
+</resources>
