--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -22,12 +22,6 @@
     <!-- If this is true, the screen will come on when you plug/unplug usb/power/whatever. -->
     <bool name="config_unplugTurnsOnScreen">true</bool>
 
-    <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveNotificationLed">true</bool>
-
-    <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveBatteryLed">true</bool>
-	
     <!-- Set to true to add links to Cell Broadcast app from Settings and MMS app. -->
     <bool name="config_cellBroadcastAppLinks">true</bool>
 
@@ -86,9 +80,6 @@
     <!-- Flag indicating if the user is notified when the mobile network access is restricted -->
     <bool name="config_user_notification_of_restrictied_mobile_access">true</bool>
 
-    <!-- Display low battery warning when battery level dips to this value -->
-    <integer name="config_lowBatteryWarningLevel">15</integer>
-    
     <!-- Whether safe headphone volume is enabled or not (country specific). -->
     <bool name="config_safe_media_volume_enabled">false</bool>    
 
@@ -104,7 +95,7 @@
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
-    <integer name="config_deviceHardwareKeys">83</integer>
+    <integer name="config_deviceHardwareKeys">0</integer>
 
     <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
@@ -118,7 +109,7 @@
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
-    <integer name="config_deviceHardwareWakeKeys">64</integer>
+    <integer name="config_deviceHardwareWakeKeys">0</integer>
 
     <!-- Enable doze mode
          ComponentName of a dream to show whenever the system would otherwise have
@@ -186,18 +177,6 @@
         timeout expires.  May be less than the minimum allowed brightness setting
         that can be set by the user. -->
     <integer name="config_screenBrightnessDim">10</integer>
-	
-    <!-- Default color for notification LED is green. -->
-    <color name="config_defaultNotificationColor">#ffffffff</color>
-
-    <!-- Default value for led color when battery is low on charge -->
-    <integer name="config_notificationsBatteryLowARGB">0xFFFF0000</integer>
-
-    <!-- Default value for led color when battery is medium charged -->
-    <integer name="config_notificationsBatteryMediumARGB">0xFFFFFF00</integer>
-
-    <!-- Default value for led color when battery is fully charged -->
-    <integer name="config_notificationsBatteryFullARGB">0xFF00FF00</integer>
 
     <integer-array name="config_autoBrightnessLevels">
         <item>128</item>
@@ -257,5 +236,25 @@
     <bool name="config_windowIsRound">true</bool>
 
     <bool name="config_animateScreenLights">false</bool>
+
+    <bool name="config_ui_enableFadingMarquee">false</bool>
+
+    <integer name="config_longPressOnPowerBehavior">1</integer>
+    <integer name="config_shortPressOnPowerBehavior">1</integer>
+    <integer name="config_doublePressOnPowerBehavior">2</integer>
+    <integer name="config_shortPressOnSleepBehavior">1</integer>
+
+    <bool name="config_bluetooth_default_profiles">false</bool>
+    <bool name="config_bluetooth_le_peripheral_mode_supported">true</bool>
+    <integer translatable="false" name="config_bluetooth_max_scan_filters">1</integer>
+
+    <bool name="config_dreamsSupported">false</bool>
+    <bool name="config_dreamsEnabledOnBattery">true</bool>
+
+    <bool name="config_supportAutoRotation">false</bool>
+
+    <bool name="config_forceDefaultOrientation">true</bool>
+
+    <bool name="config_hasRecents">false</bool>
 
 </resources>
